--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/emacs-powerline"]
 	path = vendor/emacs-powerline
 	url = git@github.com:jonathanchu/emacs-powerline.git
+[submodule "vendor/cider"]
+	path = vendor/cider
+	url = https://github.com/clojure-emacs/cider.git
